Apply .gitignore settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,15 @@
 
 # --- 예외 허용 (GitHub에 올려야 하는 DB) ---
+src/main/resources/database/*.db
 !src/main/resources/database/abbreviations.db
 !src/main/resources/database/emr_templates.db
 !src/main/resources/database/prolist.db
+
+# Gradle metadata
 .gradle/
 .gradle-cache/
 .gradle-local/
+**/.gradle/
 wrapper/dists/
 
 # Build outputs
@@ -15,3 +19,12 @@ wrapper/dists/
 # Local logs and helpers
 *.log
 .aider*
+
+# IDE and OS artifacts
+.DS_Store
+.idea/
+.vscode/
+*.iml
+.classpath
+.project
+.settings/
